--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "repository": "git@github.com:CarterLi/git-repo-info.git",
   "author": "李通洲 <carter.li@eoitek.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "yarn build-esm && yarn build-cjs",
+    "build-esm": "tsc -p .",
+    "build-cjs": "tsc -p . -m commonjs --outDir cjs"
+  },
   "devDependencies": {
-    "@types/node": "^10.11.2"
+    "@types/node": "^14.14.22",
+    "typescript": "^4.1.3"
   }
 }
