--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "git-repo-info",
+  "name": "git-cmd-repo-info",
   "version": "1.0.0",
   "description": "Retrieves repo information WITH relying on the git command.",
-  "main": "index.js",
+  "main": "cjs/index.js",
+  "module": "esm/index.js",
+  "types": "esm/index.d.ts",
   "repository": "git@github.com:CarterLi/git-repo-info.git",
   "author": "李通洲 <carter.li@eoitek.com>",
   "license": "MIT",
