--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "esnext",
     "outDir": "esm",
     "declaration": true,
+    "declarationDir": ".",
     "strict": false,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
