--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "author": "李通洲 <carter.li@eoitek.com>",
   "license": "MIT",
   "scripts": {
-    "build": "yarn clean && yarn build-esm && yarn build-cjs",
+    "build": "pnpm clean && pnpm build-esm && pnpm build-cjs",
     "clean": "rm -rf esm cjs index.d.ts",
     "build-esm": "tsc -p .",
-    "build-cjs": "tsc -p . -m commonjs --outDir cjs"
+    "build-cjs": "tsc -p . -m commonjs --outDir cjs",
+    "test": "node test"
   },
   "devDependencies": {
-    "@types/node": "^16.9.0",
-    "typescript": "^4.4.2"
+    "@types/node": "^17.0.34",
+    "typescript": "^4.6.4"
   }
 }
